// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Inputs/Dropdown Multi Select 1`] = `
<div
  className="relative"
>
  <div
    className="space-y-2"
  >
    <div
      className="flex items-baseline gap-1"
      data-headlessui-state=""
      id="headlessui-listbox-label-:rm:"
      onClick={[Function]}
    >
      <label
        className="mr-2 inline uppercase text-bold-body-300"
        data-testid="txt"
      >
        Drop down label 
      </label>
    </div>
    <p
      className="text-body-400 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Drop down description",
        }
      }
      data-testid="txt"
    />
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="headlessui-listbox-label-:rm: headlessui-listbox-button-:rn:"
      className="flex h-10 items-center justify-between gap-3 rounded-lg py-2 px-3 hover:cursor-pointer border-light"
      data-headlessui-state=""
      disabled={false}
      id="headlessui-listbox-button-:rn:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <div
        className="flex items-center gap-2"
      >
        <p
          className="w-full line-clamp-1 text-14-light"
          data-testid="txt"
        >
          placeholder
        </p>
      </div>
      <div
        style={
          Object {
            "height": undefined,
            "width": 16,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Dropdown Multi Select With Other Option 1`] = `
<div
  className="relative"
>
  <div
    className="space-y-2"
  >
    <div
      className="flex items-baseline gap-1"
      data-headlessui-state=""
      id="headlessui-listbox-label-:rq:"
      onClick={[Function]}
    >
      <label
        className="mr-2 inline uppercase text-bold-body-300"
        data-testid="txt"
      >
        Drop down label 
      </label>
    </div>
    <p
      className="text-body-400 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Drop down description",
        }
      }
      data-testid="txt"
    />
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="headlessui-listbox-label-:rq: headlessui-listbox-button-:rr:"
      className="flex h-10 items-center justify-between gap-3 rounded-lg py-2 px-3 hover:cursor-pointer border-light"
      data-headlessui-state=""
      disabled={false}
      id="headlessui-listbox-button-:rr:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <div
        className="flex items-center gap-2"
      >
        <p
          className="w-full line-clamp-1 text-14-light"
          data-testid="txt"
        >
          placeholder
        </p>
      </div>
      <div
        style={
          Object {
            "height": undefined,
            "width": 16,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Dropdown Single Select 1`] = `
<div
  className="relative"
>
  <div
    className="space-y-2"
  >
    <div
      className="flex items-baseline gap-1"
      data-headlessui-state=""
      id="headlessui-listbox-label-:rk:"
      onClick={[Function]}
    >
      <label
        className="mr-2 inline uppercase text-bold-body-300"
        data-testid="txt"
      >
        Drop down label 
      </label>
    </div>
    <p
      className="text-body-400 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Drop down description",
        }
      }
      data-testid="txt"
    />
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="headlessui-listbox-label-:rk: headlessui-listbox-button-:rl:"
      className="flex h-10 items-center justify-between gap-3 rounded-lg py-2 px-3 hover:cursor-pointer border-light"
      data-headlessui-state=""
      disabled={false}
      id="headlessui-listbox-button-:rl:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <div
        className="flex items-center gap-2"
      >
        <p
          className="w-full line-clamp-1 text-14-light"
          data-testid="txt"
        >
          placeholder
        </p>
      </div>
      <div
        style={
          Object {
            "height": undefined,
            "width": 16,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Dropdown Single Select With Meta Data 1`] = `
<div
  className="space-y-2"
>
  <div
    className="flex items-baseline gap-1"
    data-headlessui-state=""
    id="headlessui-listbox-label-:rs:"
    onClick={[Function]}
  >
    <label
      className="mr-2 inline uppercase capitalize text-16-bold"
      data-testid="txt"
    >
      Select Polygon 
    </label>
  </div>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:rs: headlessui-listbox-button-:rt:"
    className="flex h-10 items-center justify-between gap-3 rounded-lg py-2 px-3 hover:cursor-pointer border-light"
    data-headlessui-state=""
    disabled={false}
    id="headlessui-listbox-button-:rt:"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
  >
    <div
      className="flex items-center gap-2"
    >
      <div
        className="min-h-[8px] min-w-[8px] rounded-full "
      />
      <p
        className="w-full line-clamp-1 text-14-light"
        data-testid="txt"
      >
        Aerobic Agroforestry
      </p>
    </div>
    <div
      style={
        Object {
          "height": undefined,
          "width": 16,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Dropdown Single Select With Other Option 1`] = `
<div
  className="relative"
>
  <div
    className="space-y-2"
  >
    <div
      className="flex items-baseline gap-1"
      data-headlessui-state=""
      id="headlessui-listbox-label-:ro:"
      onClick={[Function]}
    >
      <label
        className="mr-2 inline uppercase text-bold-body-300"
        data-testid="txt"
      >
        Drop down label 
      </label>
    </div>
    <p
      className="text-body-400 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Drop down description",
        }
      }
      data-testid="txt"
    />
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="headlessui-listbox-label-:ro: headlessui-listbox-button-:rp:"
      className="flex h-10 items-center justify-between gap-3 rounded-lg py-2 px-3 hover:cursor-pointer border-light"
      data-headlessui-state=""
      disabled={false}
      id="headlessui-listbox-button-:rp:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <div
        className="flex items-center gap-2"
      >
        <p
          className="w-full line-clamp-1 text-14-light"
          data-testid="txt"
        >
          placeholder
        </p>
      </div>
      <div
        style={
          Object {
            "height": undefined,
            "width": 16,
          }
        }
      />
    </div>
  </div>
</div>
`;
